using Integer.getValue and Double.getValue